AXI_M/solution1/sim/wrapc/err.log
C:/Users/marco/Desktop/NECST/NL2/AXI_M/AXI_M/test_core.cpp: In function 'int main()':
C:/Users/marco/Desktop/NECST/NL2/AXI_M/AXI_M/test_core.cpp:51:23: error: invalid conversion from 'int*' to 'int' [-fpermissive]
     setMem(A, B, C, OP);
                       ^
C:/Users/marco/Desktop/NECST/NL2/AXI_M/AXI_M/test_core.cpp:18:6: note:   initializing argument 4 of 'void setMem(volatile int*, volatile int*, volatile int*, int)'
 void setMem(volatile int* a, volatile int* b, volatile int* c, int op);
      ^~~~~~
make: *** [obj/test_core.cpp_pre.cpp.tb.o] Error 1
